--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -4,15 +4,6 @@ name: Pull request validation
 # Definition when the workflow should run
 on:
   workflow_dispatch:
-    inputs:
-      organization: 
-        description: Target environment
-        required: true
-        type: choice
-        options:
-          - DEV
-          - UAT
-          - PRD
   pull_request:
     types: [opened, synchronize, reopened]
     branches: 
@@ -34,3 +25,10 @@ jobs:
         run: |
             npm install sfdx-cli --global
             sfdx --version
+
+      # Authenticate
+      run: |
+          echo "${SFDX_DEV_URL}" > SFDX_DEV_URL.txt
+          sfdx auth:sfdxurl:store -f ./SFDX_DEV_URL.txt -a devhub -d
+
+      # Deploy source to org
