--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -19,6 +19,8 @@ jobs:
       # Checkout the source code
       - name: 'Checkout source code'
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       # Install Salesforce CLI
       - name: 'Install Salesforce CLI'
