--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -58,7 +58,7 @@ jobs:
             echo ""
             cat delta-src/package/package.xml
             echo ""
-            ls -lart
+            ls -lart delta-src/
 
       # Deploy source to org
       - name: 'Deploy source to org'
