--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -67,8 +67,8 @@ jobs:
         shell: bash
         run: |
             mkdir delta-src/
-            git_hash={git rev-list -n 1 2.6.0}
-            sfdx sgd:source:delta --to "HEAD" --from $git_hash --output delta-src/ --generate-delta --source force-app/
+            gitHash=$(git rev-list -n 1 2.6.0)
+            sfdx sgd:source:delta --to "HEAD" --from $gitHash --output delta-src/ --generate-delta --source force-app/
             echo; cat delta-src/package/package.xml
             packageFileSize=$(wc -c "delta-src/package/package.xml")
             if [ $packageFileSize <= 4 ]; then
