--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -24,22 +24,13 @@ env:
 # Jobs to be executed
 jobs:
   check-only-build:
-    runs-on: ubuntu-latest    
+    runs-on: ubuntu-latest
     steps:
       # Checkout the source code
       - name: 'Checkout source code'
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      # Get commit id
-      - name: 'Get commit id'
-        shell: bash
-        run: |
-            if [ -z "${{ vars.TAG }}" ]; then
-              GIT_HASH=$(git rev-list -n 1 ${{ vars.TAG }})
-            fi
-            echo "Git commit id set to $GIT_HASH"
 
       # Install Salesforce CLI
       - name: 'Install Salesforce CLI'
@@ -58,8 +49,7 @@ jobs:
         shell: bash
         run: |
             echo "${{ secrets.SFDX_URL_DEV }}" > ./sfdx_url_dev.txt
-            secretFileSize=$(wc -c "./sfdx_url_dev.txt" | awk '{print $1}')
-            if [ $secretFileSize == 1 ]; then
+            if [ $(wc -c "./sfdx_url_dev.txt" | awk '{print $1}') ]; then
               echo "Missing GitHub secret!";
               exit 1;
             fi
@@ -67,20 +57,27 @@ jobs:
       # Authenticate to org
       - name: 'Authenticate org'
         run: sfdx auth:sfdxurl:store -f ./sfdx_url_dev.txt -a devhub -d -s
-      
 
+      # Get commit id
+      - name: 'Get commit id'
+        shell: bash
+        run: |
+            if [ ! -z "${{ vars.TAG }}" ]; then
+              GIT_HASH=$(git rev-list -n 1 ${{ vars.TAG }})
+            fi
+            echo "Git commit id: $GIT_HASH"
+      
       # Create delta package
       - name: 'Create delta package'
         shell: bash
         run: |
             mkdir delta-src/
-            gitHash=$(git rev-list -n 1 2.6.0)
-            sfdx sgd:source:delta --to "HEAD" --from $gitHash --output delta-src/ --generate-delta --source force-app/
-            echo; cat delta-src/package/package.xml
-            packageFileSize=$(wc -c "delta-src/package/package.xml")
-            if [ $packageFileSize <= 4 ]; then
+            sfdx sgd:source:delta --to "HEAD" --from $GIT_HASH --output delta-src/ --generate-delta --source force-app/
+            if [ $(wc -c "delta-src/package/package.xml") <= 4]; then
               echo "Package XML is empty!"
               exit 1;
+            else
+              echo; cat delta-src/package/package.xml
             fi
       
       # Run PMD code scan on delta
