--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -73,6 +73,7 @@ jobs:
         run: |
             mkdir delta-src/
             sfdx sgd:source:delta --to "HEAD" --from $GIT_HASH --output delta-src/ --generate-delta --source force-app/
+            echo $(wc -c "delta-src/package/package.xml")
             if [ $(wc -c "delta-src/package/package.xml") <= 4]; then
               echo "Empty package xml"
               exit 1;
