--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -71,7 +71,7 @@ jobs:
         run: |
             mkdir delta-src/
             sfdx sgd:source:delta --to "HEAD" --from ${{ env.GIT_HASH }} --output delta-src/ --generate-delta --source force-app/
-            if [ $(wc -l "delta-src/package/package.xml") <= 4]; then
+            if [ $(wc -l "delta-src/package/package.xml") -le 4]; then
               echo "Empty package xml"
               exit 1;
             else
