--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -14,6 +14,7 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
     branches: 
+      - main
       - cpq
     paths:
       - 'force-app/**'
